--- a/css/csscomun.css
+++ b/css/csscomun.css
@@ -1,40 +1,43 @@
-/* Hoja de estilos CSS */
+/**********************************
+GENERAL
+***********************************/
 
-
-/********
- GENERAL
-********/
-body{
+body {
   font-family: 'Open Sans', sans-serif;
-
 }
 
-#wrapper{
+#wrapper {
   max-width: 940px;
-  margin: 0 auto; /*To center*/
+  margin: 0 auto;
   padding: 0 5%;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-img{
-  max-width: 100%; /*Tells the image to shrink in case we*/
+img {
+  max-width: 100%;
 }
 
-/********
- HEADING
-********/
+h3 {
+  margin: 0 0 1em 0;
+}
 
-header{
+
+
+/**********************************
+HEADING
+***********************************/
+
+header {
   float: left;
-  margin: 0 0 30px 0; /*Top and clockwise, removes problem with the top margin*/
-  padding: 5px 0 0 0; /**/
-  width: 100%; /*This widget has to occupy all the window*/
+  margin: 0 0 30px 0;
+  padding: 5px 0 0 0;
+  width: 100%;
 }
 
-#logo{
+#logo {
   text-align: center;
   margin: 0;
 }
@@ -42,47 +45,49 @@ header{
 h1 {
   font-family: 'Changa One', sans-serif;
   margin: 15px 0;
-  font-size: 1.75em; /*1em = 16px*/
+  font-size: 1.75em;
   font-weight: normal;
-  line-height: 0.8em; /*Space between letters*/
+  line-height: 0.8em;
 }
 
 h2 {
-  font-size: 0.75em; /*smaller value*/
-  margin: -5px 0 0; /*the top, the left and right, the buttom. Only margin in the top*/
-  font-weight: normal; /*unbold*/
+  font-size: 0.75em;
+  margin: -5px 0 0;
+  font-weight: normal;
 }
 
-/********
- NAVIGATION
-********/
 
-nav{
+
+/**********************************
+NAVIGATION
+***********************************/
+
+nav {
   text-align: center;
   padding: 10px 0;
   margin: 20px 0 0;
 }
 
-nav ul{
-  list-style:none;
+nav ul {
+  list-style: none;
   margin: 0 10px;
   padding: 0;
 }
 
-nav li{
-  display: inline-block; /*Sections, div etc move elements. paragraph doesn't do that*/
-
+nav li {
+  display: inline-block;
 }
 
-nav a{
-  font-weight:800;
-  padding: 15px, 10px:
-
+nav a {
+  font-weight: 800;
+  padding: 15px 10px;
 }
 
-/********
- FOOTER
-********/
+
+
+/**********************************
+FOOTER
+***********************************/
 
 footer {
   font-size: 0.75em;
@@ -98,48 +103,51 @@ footer {
   margin: 0 5px;
 }
 
-/********
- PAGE PORTFOLIO
-********/
 
-#gallery{
+
+/**********************************
+PAGE: PORTFOLIO
+***********************************/
+
+#gallery {
   margin: 0;
   padding: 0;
-  list-style: none; /*Delete the points*/
-
+  list-style: none;
 }
 
 #gallery li {
-  float: left; /*Image position is next to the previous*/
-  width:45%; /*Images use 45% of the width of the window browser*/
+  float: left;
+  width: 45%;
   margin: 2.5%;
   background-color: #f5f5f5;
   color: #bdc3c7;
 }
 
-#gallery li a p{
+#gallery li a p {
   margin: 0;
   padding: 5%;
   font-size: 0.75em;
-  color: #bdc3c7;
+  color: #bdc3c7
 }
 
-/********
- PAGE ABOUT
-********/
+
+
+/**********************************
+PAGE: ABOUT
+***********************************/
 
 .profile-photo {
   display: block;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 30px;
-  border-radius: 100px;
-  max-width: 100%;
+  max-width: 150px;
+  margin: 0 auto 30px;
+  border-radius: 100%;
 }
 
-/***************
- PAGE CONTACT
-***************/
+
+
+/**********************************
+PAGE: CONTACT
+***********************************/
 
 .contact-info {
   list-style: none;
@@ -147,36 +155,44 @@ footer {
   margin: 0;
   font-size: 0.9em;
 }
-.contact-info a{
-  min-height: 20px;
+
+.contact-info a {
   display: block;
+  min-height: 20px;
   background-repeat: no-repeat;
   background-size: 20px 20px;
   padding: 0 0 0 30px;
   margin: 0 0 10px;
 }
-.contact-info li.phone a{
+
+.contact-info li.phone a {
   background-image: url('../img/phone.png');
 }
-.contact-info li.email a{
+
+.contact-info li.mail a {
   background-image: url('../img/mail.png');
 }
-.contact-info li.twitter a{
+
+.contact-info li.twitter a {
   background-image: url('../img/twitter.png');
 }
 
-/********
- COLORs
-********/
 
+
+/**********************************
+COLORS
+***********************************/
+
+/* site body */
 body {
   background-color: #fff;
   color: #999;
 }
 
-header{
-    background: #6ab47b;
-    border-color: #599a68;
+/* green header */
+header {
+  background: #6ab47b;
+  border-color: #599a68;
 }
 
 /* nav background on mobile */
@@ -184,6 +200,7 @@ nav {
   background: #599a68;
 }
 
+/* logo text */
 h1, h2 {
   color: #fff;
 }
